--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
                         <div class="section-title mb-4 pb-2">
-                            <h4 class="title mb-4">Explore Our Services</h4>
-                            <p class="text-muted para-desc mb-0 mx-auto">Start working with <span class="text-primary fw-bold">Lingtics</span> that can provide everything you need to generate awareness, drive traffic, connect.</p>
+                            <h4 class="title mb-4">Explora nuestros servicios</h4>
+                            <p class="text-muted para-desc mb-0 mx-auto"><span class="text-primary fw-bold">Lingtics</span> puede brindar todo lo que su empresa necesita para abordar adecuadamente problemas relacionados con el uso del lenguaje.</p>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
@@ -436,7 +436,7 @@
                                 <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Land Transport</a></h5>
                                 <p class="text-muted">The most well-known which is said to have originated</p>
 
-                                <a href="javascript:void(0)" class="text-primary">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -448,10 +448,10 @@
                             </div>
 
                             <div class="card-body p-0 content">
-                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Air Freight</a></h5>
-                                <p class="text-muted">The most well-known which is said to have originated</p>
+                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Voz a texto</a></h5>
+                                <p class="text-muted">Realice transcripciones de audio a texto.</p>
 
-                                <a href="javascript:void(0)" class="text-primary">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -463,10 +463,10 @@
                             </div>
 
                             <div class="card-body p-0 content">
-                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Ocean Freight</a></h5>
+                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Redes sociales</a></h5>
                                 <p class="text-muted">The most well-known which is said to have originated</p>
 
-                                <a href="javascript:void(0)" class="text-primary">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -478,10 +478,10 @@
                             </div>
 
                             <div class="card-body p-0 content">
-                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Cost Saving</a></h5>
+                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Análisis de sentimientos</a></h5>
                                 <p class="text-muted">The most well-known which is said to have originated</p>
 
-                                <a href="javascript:void(0)" class="text-primary">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -496,7 +496,7 @@
                                 <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Safe Packing</a></h5>
                                 <p class="text-muted">The most well-known which is said to have originated</p>
 
-                                <a href="javascript:void(0)" class="text-primary">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -508,10 +508,10 @@
                             </div>
 
                             <div class="card-body p-0 content">
-                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Fast Shipping</a></h5>
+                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Consultoría</a></h5>
                                 <p class="text-muted">The most well-known which is said to have originated</p>
 
-                                <a href="javascript:void(0)" class="text-primary">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -553,7 +553,7 @@
                     <div class="col-12 text-center">
                         <div class="title-heading">
                             <img src="images/logo-light.png" height="104" alt="">
-                            <h4 class="heading title-dark text-white my-4">World’s Leading Contract <br> Logistics Provider</h4>
+                            <h4 class="heading title-dark text-white my-4">World’s Leadin'g C´ontract <br> Logistics Provider</h4>
                             <p class="text-white-50 para-dark para-desc mx-auto">Start working with Lingtics that can provide everything you need to generate awareness, drive traffic, connect.</p>
                             <a href="#!" data-type="youtube" data-id="yba7hPeTSjk" class="play-btn border border-light mt-4 lightbox">
                                 <i data-feather="play" class="fea icon-ex-md text-white title-dark"></i>
@@ -710,7 +710,7 @@
                                         <li class="list-inline-item me-2 mb-0"><a href="javascript:void(0)" class="text-muted like"><i class="uil uil-heart me-1"></i>33</a></li>
                                         <li class="list-inline-item"><a href="javascript:void(0)" class="text-muted comments"><i class="uil uil-comment me-1"></i>08</a></li>
                                     </ul>
-                                    <a href="blog-detail.html" class="text-muted readmore">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                    <a href="blog-detail.html" class="text-muted readmore">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                                 </div>
                             </div>
                             <div class="author">
@@ -733,7 +733,7 @@
                                         <li class="list-inline-item me-2 mb-0"><a href="javascript:void(0)" class="text-muted like"><i class="uil uil-heart me-1"></i>33</a></li>
                                         <li class="list-inline-item"><a href="javascript:void(0)" class="text-muted comments"><i class="uil uil-comment me-1"></i>08</a></li>
                                     </ul>
-                                    <a href="blog-detail.html" class="text-muted readmore">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                    <a href="blog-detail.html" class="text-muted readmore">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                                 </div>
                             </div>
                             <div class="author">
@@ -756,7 +756,7 @@
                                         <li class="list-inline-item me-2 mb-0"><a href="javascript:void(0)" class="text-muted like"><i class="uil uil-heart me-1"></i>33</a></li>
                                         <li class="list-inline-item"><a href="javascript:void(0)" class="text-muted comments"><i class="uil uil-comment me-1"></i>08</a></li>
                                     </ul>
-                                    <a href="blog-detail.html" class="text-muted readmore">Read More <i class="uil uil-angle-right-b align-middle"></i></a>
+                                    <a href="blog-detail.html" class="text-muted readmore">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                                 </div>
                             </div>
                             <div class="author">
