--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                             </div>
 
                             <div class="card-body p-0 content">
-                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Land Transport</a></h5>
+                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Minería de texto</a></h5>
                                 <p class="text-muted">The most well-known which is said to have originated</p>
 
                                 <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
@@ -449,7 +449,7 @@
 
                             <div class="card-body p-0 content">
                                 <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Voz a texto</a></h5>
-                                <p class="text-muted">Realice transcripciones de audio a texto.</p>
+                                <p class="text-muted">Realice transcripciones de audio a texto</p>
 
                                 <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                             </div>
@@ -493,7 +493,7 @@
                             </div>
 
                             <div class="card-body p-0 content">
-                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Safe Packing</a></h5>
+                                <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Asistentes conversacionales</a></h5>
                                 <p class="text-muted">The most well-known which is said to have originated</p>
 
                                 <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
@@ -509,7 +509,7 @@
 
                             <div class="card-body p-0 content">
                                 <h5 class="mt-4"><a href="javascript:void(0)" class="title text-dark">Consultoría</a></h5>
-                                <p class="text-muted">The most well-known which is said to have originated</p>
+                                <p class="text-muted">Ayuda en la mejora de cualquier aspecto lingüístico de su empresa</p>
 
                                 <a href="javascript:void(0)" class="text-primary">Leer más<i class="uil uil-angle-right-b align-middle"></i></a>
                             </div>
