--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Servicios tecnológicos basados en inteligencia artificial para el procesamiento del lenguaje natural." />
         <meta name="keywords" content="analisis, lenguaje, inteligencia artificial, NLP, linguistica computacional" />
         <meta name="author" content="Lingtics" />
-        <meta name="email" content="contact@lingtics.com" />
+        <meta name="email" content="lingtics@gmail.com" />
         <meta name="website" content="https://lingtics.com" />
         <meta name="version" content="v2.2.0" />
         <!-- favicon -->
@@ -798,7 +798,7 @@
                                         <div class="content mt-4">
                                             <h5 class="footer-head">Email</h5>
                                             <p class="text-muted">Start working with Lingtics that can provide everything</p>
-                                            <a href="mailto:contact@lintics.com" class="text-foot">contact@lintics.com</a>
+                                            <a href="mailto:lingtics@gmail.com" class="text-foot">lingtics@gmail.com</a>
                                         </div>
                                     </div>
                                 </div><!--end col-->
