--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Servicios tecnológicos basados en inteligencia artificial para el procesamiento del lenguaje natural." />
         <meta name="keywords" content="analisis, lenguaje, inteligencia artificial, NLP, linguistica computacional" />
         <meta name="author" content="Lingtics" />
-        <meta name="email" content="contact@lingtics.com" />
+        <meta name="email" content="lingtics@gmail.com" />
         <meta name="website" content="https://lingtics.com" />
         <meta name="version" content="v2.2.0" />
         <!-- favicon -->
