--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Premium Bootstrap 5 Landing Page Template" />
         <meta name="keywords" content="Saas, Software, multi-uses, HTML, Clean, Modern" />
         <meta name="author" content="Shreethemes" />
-        <meta name="email" content="support@shreethemes.in" />
+        <meta name="email" content="lingtics@gmail.com" />
         <meta name="website" content="https://shreethemes.in" />
         <meta name="version" content="v3.8.0" />
         <!-- favicon -->
