--- a/404.html
+++ b/404.html
@@ -6,12 +6,12 @@
         <meta charset="utf-8" />
         <title>Lingtics | Tecnologías lingüísticas</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Premium Bootstrap 5 Landing Page Template" />
-        <meta name="keywords" content="Saas, Software, multi-uses, HTML, Clean, Modern" />
-        <meta name="author" content="Shreethemes" />
+        <meta name="description" content="Servicios tecnológicos basados en inteligencia artificial para el procesamiento del lenguaje natural." />
+        <meta name="keywords" content="analisis, lenguaje, inteligencia artificial, NLP, linguistica computacional" />
+        <meta name="author" content="Lingtics" />
         <meta name="email" content="lingtics@gmail.com" />
-        <meta name="website" content="https://shreethemes.in" />
-        <meta name="version" content="v3.8.0" />
+        <meta name="website" content="https://lingtics.com" />
+        <meta name="version" content="v2.2.1" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
         <!-- Bootstrap -->
