--- a/recuperar-cuenta.html
+++ b/recuperar-cuenta.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,9 +8,9 @@
         <meta name="description" content="Servicios tecnológicos basados en inteligencia artificial para el procesamiento del lenguaje natural." />
         <meta name="keywords" content="analisis, lenguaje, inteligencia artificial, NLP, linguistica computacional" />
         <meta name="author" content="Lingtics" />
-        <meta name="email" content="contact@lingtics.com" />
+        <meta name="email" content="lingtics@gmail.com" />
         <meta name="website" content="https://lingtics.com" />
-        <meta name="version" content="v2.2.0" />
+        <meta name="version" content="v2.2.1" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.png">
         <!-- Bootstrap -->
